# ezid_test_client

./: .gitignore  README.md  mbot.py  pyproject.toml  qw.py  run_queries.py
ezid_query/: ezidq.py
tests/: conftest.py  test_api_create.py  test_ui_0.py  test_ui_basic.py
