[tool.poetry]
name = "ezid_pyppeteer"
version = "0.1.0"
description = "Implements MariaBot"
authors = ["datadavev <605409+datadavev@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
click = "^8.0.1"
pytest-pyppeteer = {git = "https://github.com/luizyao/pytest-pyppeteer.git"}
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
dateparser = "^1.0.0"
mysql-connector-python = "^8.0.26"
xmltodict = "^0.12.0"
python-benedict = "^0.24.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
